--- a/runner.conf
+++ b/runner.conf
@@ -2,7 +2,7 @@ root:              .
 tmp_path:          ./tmp
 build_name:        runner-build
 build_log:         runner-build-errors.log
-valid_ext:         .go, .tpl, .tmpl, .html, .gohtml
+valid_ext:         .go, .tpl, .tmpl, .html, .gohtml, *.css
 no_rebuild_ext:    .tpl, .tmpl, .html
 ignored:           assets, tmp
 build_delay:       300
